# micromouse-algo

./: .gitignore  CMakeLists.txt  main.c  makefile  maze.c  maze.h
src/: main.c
src/algo/: floodFill.c  floodFill.h  maze.c  maze.h  stack.c  stack.h  stateMachine.c  stateMachine.h
src/desktop-utilities/: mazeReadAndDisplay.c  mazeReadAndDisplay.h  misc.c  misc.h  misc_imp_linux.c  misc_imp_windows.c
src/hardware-mock/mouse_control_interface/: configswitch_mci.c  configswitch_mci.h  movement_mci.c  movement_mci.h  time_mci.c  time_mci.h  walldetection_mci.c  walldetection_mci.h
